# bot-discord

./: .env.example  .gitignore  BotPersonal.spec  README.md  bot.py  database.py  diagnosticar_bd.py  factura_processor.py  gastos.db-shm  gastos.db-wal  iniciar_bot.bat  iniciar_bot.py  iniciar_bot.sh  main.py  oauth_handler.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_tests_coverage.py  setup.py  test_tesseract.py  test_utils.py  verificar_tesseract.py  version.py  web_server.py
.github/workflows/: ci-cd.yml
src/: __init__.py  bot.py  factura_processor.py  logger.py  oauth_handler.py  schema.sql  tesseract_paths.json  utils.py  web_server.py
src/config/: __init__.py  app_config.py  database_config.py  db_persistence.py  exception_handler.py  logging_config.py  ocr_config.py  ocr_keywords.json  tesseract_config.py
src/controller/: __init__.py  comando_controller.py  evento_controller.py
src/dao/: __init__.py  gasto_dao.py
src/models/: __init__.py  base.py  gasto_model.py
src/repository/: __init__.py  gasto_repository.py
src/services/: __init__.py  discord_service.py  gasto_service.py  template_service.py
src/templates/: error.html  error.md  gastos_categorias.md  gastos_categorias.txt  gastos_recientes.md  gastos_recientes.txt  index.html  resumen_total.md  resumen_total.txt  success.html
tests/: __init__.py  conftest.py  test_config.py  test_crud.py  test_database.py  test_factura_processor.py  test_models.py  test_tesseract.py  test_web_server.py
