[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BotPersonal"
dynamic = ["version"]
description = "Bot de Discord para gestión de gastos con OCR de facturas"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bot Personal Team", email = "info@botpersonal.dev"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "discord.py>=2.3.0",
    "SQLAlchemy>=2.0.0",
    "Flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "requests>=2.31.0",
    "PyNaCl>=1.5.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["src*"]

